--- a/public/css/style.css
+++ b/public/css/style.css
@@ -248,6 +248,7 @@ a.more {
 .btn {
   font-weight: 600;
   padding: 12px 30px;
+  margin-bottom: 5%;
   border-radius: 30px;
   color: #ffffff;
   background: #2f2f2f;
@@ -1247,5 +1248,60 @@ a {
   color: #666;
   text-align: left;
 
+}
+
+
+
+.input-group-text {
+  background-color: #f8f9fa; /* Light background */
+  border: 1px solid #ced4da; /* Same border as input */
+}
+
+
+.price-slider {
+  width: 300px;
+  position: relative;
+  margin: 20px 0;
+}
+
+.price-slider input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: linear-gradient(to right, #aec5bc, #3B5D50);
+  border-radius: 5px;
+  outline: none;
+  margin-top: 10px;
+}
+
+.price-slider input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.price-slider input[type=range]::-moz-range-thumb {
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#price-range-display {
+  display: block;
+  margin-top: 0px;
+  font-size: 16px;
+  color: #333;
+}
+
+.price-slider label {
+  font-size: 16px;
+  font-weight: bold;
 }
 
