--- a/public/css/user_profile_style.css
+++ b/public/css/user_profile_style.css
@@ -48,7 +48,7 @@ h3{
     color: white;
     border: none;
     border-radius: 8px;
-    padding: 8px 16px;
+    /* padding: 8px 16px; */
     transition: background-color 0.3s;
 }
 
@@ -275,17 +275,24 @@ h3{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .wishlist-card {
-    transition: transform 0.2s ease; /* Smooth transition */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
-    border: 1px solid #e0e0e0; /* Border around cards */
+    transition: transform 0.2s ease; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    border: 1px solid #e0e0e0;
 }
-
 .wishlist-card:hover {
-    transform: translateY(-5px); /* Move the card up on hover */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+    transform: translateY(-5px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .card-img-top {
-    display: block; /* Center the image */
-    margin: 0 auto; /* Center the image */
+    display: block; 
+    margin: 0 auto; 
+}
+
+.wishlist-slider {
+    display: flex;
+    gap: 10px;
+}
+.wishlist-item {
+    padding: 10px;
 }
