--- a/public/css/user_profile_style.css
+++ b/public/css/user_profile_style.css
@@ -225,42 +225,51 @@ h3{
 .modal-body {
     background-color: #f9f9f9; 
 }
-
-
-/* Wishlist Section */
+/* Wishlist Item Style */
 .wishlist-item {
     background-color: #F9F9F9;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 15px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    width: 100%;
+    max-width: 250px;  
+    height: 350px;    
     transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .wishlist-item:hover {
     background-color: #fff;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
 }
-
-.wishlist-item img {
-    width: 100px;
-    height: 90px;
+.wishlist-image {
+    width: 110px;     
+    height: 100px;     
     border-radius: 8px;
     object-fit: fill;
+    margin-top: 10px;
+    margin: auto;
+}
+.wishlist-details {
+    text-align: center;
+    margin-top: 10px;
 }
 
-.wishlist-item .wishlist-details {
-    flex-grow: 1;
-    margin-left: 15px;
-}
-
-.wishlist-item .wishlist-details h6 {
+.wishlist-details h6 {
+    font-size: 1.1rem;
     margin-bottom: 5px;
 }
 
+.wishlist-details p {
+    font-size: 1rem;   
+}
+
+/* Button Style */
 .btn-danger {
     background-color: #ff5a5f;
     border: none;
@@ -274,25 +283,7 @@ h3{
     background-color: #e04848;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
-.wishlist-card {
-    transition: transform 0.2s ease; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    border: 1px solid #e0e0e0;
-}
-.wishlist-card:hover {
-    transform: translateY(-5px); 
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
-}
-
-.card-img-top {
-    display: block; 
-    margin: 0 auto; 
-}
-
 .wishlist-slider {
     display: flex;
     gap: 10px;
-}
-.wishlist-item {
-    padding: 10px;
 }
